// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`com.mgmtp.a12.widgets.breadcrumb > render basic breadcrumb 1`] = `
.c6 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c6 * {
  width: 1px;
  height: 1px;
}

.c0 {
  font-family: "Open Sans", sans-serif;
  list-style: none;
  margin: 0px;
  padding: 0px;
}

.c1 {
  color: rgb(77, 77, 77);
  display: inline;
  font-size: 0.75rem;
  line-height: normal;
}

.c2 {
  display: inline;
  margin: 0px 8px 0px 0px;
}

.c4 {
  color: rgb(226, 230, 233);
  font-size: 0.75rem;
  line-height: 1px;
  margin: 0px 8px 0px 0px;
}

.c5 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Icons";
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c5 > span {
  display: inline-block;
}

.c5.c5 {
  max-width: unset;
}

.c3 .c5 {
  font-size: 0.75rem;
  line-height: 1px;
  margin: -4px;
  vertical-align: middle;
}

<div
  aria-label="Breadcrumb"
  class="breadcrumb-wrapper"
  data-role="breadcrumb"
  role="navigation"
>
  <ul
    class="c0 breadcrumb"
    data-role="breadcrumb-list"
  >
    <li
      class="c1 breadcrumb__item"
      data-role="breadcrumb-item"
    >
      <div
        class="c2 breadcrumb__content"
        data-role="breadcrumb-content"
      >
        Home
      </div>
      <span
        class="c3 c4 breadcrumb__separator"
        data-role="breadcrumb-separator"
      >
        <i
          class="c5 plasma-icon breadcrumb__separator-icon"
          data-role="plasma-icon"
        >
          <span
            aria-hidden="true"
          >
            chevron_right
          </span>
        </i>
      </span>
    </li>
    <li
      class="c1 breadcrumb__item"
      data-role="breadcrumb-item"
    >
      <div
        class="c2 breadcrumb__content"
        data-role="breadcrumb-content"
      >
        Room
      </div>
      <span
        class="c3 c4 breadcrumb__separator"
        data-role="breadcrumb-separator"
      >
        <i
          class="c5 plasma-icon breadcrumb__separator-icon"
          data-role="plasma-icon"
        >
          <span
            aria-hidden="true"
          >
            chevron_right
          </span>
        </i>
      </span>
    </li>
    <li
      class="c1 breadcrumb__item"
      data-role="breadcrumb-item"
    >
      <span
        class="c6 -u-unseenButRead"
        data-role="hidden-text"
      >
        You are here: 
      </span>
      <div
        aria-current="page"
        class="c2 breadcrumb__content"
        data-role="breadcrumb-content"
      >
        Bathroom
      </div>
    </li>
  </ul>
</div>
`;

exports[`com.mgmtp.a12.widgets.breadcrumb > render custom separator breadcrumb 1`] = `
.c5 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c5 * {
  width: 1px;
  height: 1px;
}

.c0 {
  font-family: "Open Sans", sans-serif;
  list-style: none;
  margin: 0px;
  padding: 0px;
}

.c1 {
  color: rgb(77, 77, 77);
  display: inline;
  font-size: 0.75rem;
  line-height: normal;
}

.c2 {
  display: inline;
  margin: 0px 8px 0px 0px;
}

.c4 {
  color: rgb(226, 230, 233);
  font-size: 0.75rem;
  line-height: 1px;
  margin: 0px 8px 0px 0px;
}

.c3 .c6 {
  font-size: 0.75rem;
  line-height: 1px;
  margin: -4px;
  vertical-align: middle;
}

<div
  aria-label="Breadcrumb"
  class="breadcrumb-wrapper"
  data-role="breadcrumb"
  role="navigation"
>
  <ul
    class="c0 breadcrumb"
    data-role="breadcrumb-list"
  >
    <li
      class="c1 breadcrumb__item"
      data-role="breadcrumb-item"
    >
      <div
        class="c2 breadcrumb__content"
        data-role="breadcrumb-content"
      >
        Home
      </div>
      <span
        class="c3 c4 breadcrumb__separator"
        data-role="breadcrumb-separator"
      >
        /
      </span>
    </li>
    <li
      class="c1 breadcrumb__item"
      data-role="breadcrumb-item"
    >
      <div
        class="c2 breadcrumb__content"
        data-role="breadcrumb-content"
      >
        Room
      </div>
      <span
        class="c3 c4 breadcrumb__separator"
        data-role="breadcrumb-separator"
      >
        /
      </span>
    </li>
    <li
      class="c1 breadcrumb__item"
      data-role="breadcrumb-item"
    >
      <span
        class="c5 -u-unseenButRead"
        data-role="hidden-text"
      >
        You are here: 
      </span>
      <div
        aria-current="page"
        class="c2 breadcrumb__content"
        data-role="breadcrumb-content"
      >
        Bathroom
      </div>
    </li>
  </ul>
</div>
`;
